--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -5,73 +5,78 @@
 
 @model TaskManagementSystem.ViewModels.RegisterViewModel
 
-<div class="card mt-5">
-    <div class="card-body">
-        <h1 class="h3 mb-3 fw-normal text-center">Create an Account</h1>
+<h1 class="h3 mb-5 fw-normal text-center">Create an Account</h1>
 
-        <form asp-action="Register">
+<form asp-action="Register">
+    <div class="form-floating mb-3">
+        <input asp-for="Email" type="email" class="form-control" id="floatingEmail" placeholder="Email">
+        <label asp-for="Email" for="floatingEmail">Email</label>
+        <span asp-validation-for="Email" class="text-danger"></span>
+    </div>
 
-            <div class="form-floating mb-3">
-                <input asp-for="Email" type="email" class="form-control" id="floatingEmail" placeholder="Email">
-                <label asp-for="Email" for="floatingEmail">Email</label>
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
+    <div class="form-floating mb-3">
+        <input asp-for="Password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <label asp-for="Password" for="floatingPassword">Password</label>
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
 
-            <div class="form-floating mb-3">
-                <input asp-for="Password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label asp-for="Password" for="floatingPassword">Password</label>
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
+    <div class="form-floating mb-3">
+        <input asp-for="ConfirmPassword" type="password" class="form-control" id="floatingConfirmPassword" placeholder="Confirm Password">
+        <label asp-for="ConfirmPassword" for="floatingConfirmPassword">Confirm Password</label>
+        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+    </div>
 
-            <div class="form-floating mb-3">
-                <input asp-for="ConfirmPassword" type="password" class="form-control" id="floatingConfirmPassword" placeholder="Confirm Password">
-                <label asp-for="ConfirmPassword" for="floatingConfirmPassword">Confirm Password</label>
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
+    <button class="btn btn-primary btn-lg bg-success mb-3 w-100 py-2" type="submit">Continue</button>
 
-            <button class="btn btn-primary w-100 py-2" type="submit">Continue</button>
-
-            @if (!ViewData.ModelState.IsValid)
-            {
-                <div class="alert alert-danger" role="alert">
-                    <strong>Error:</strong> There was a problem with your profile save.
-                    <ul>
-                        @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
-                        {
-                            <li>@error.ErrorMessage</li>
-                        }
-                    </ul>
-                </div>
-            }
-        </form>
-
-        <div class="mt-3 text-center">
-            @{
-                if (Model.ExternalLogins?.Count == 0)
+    @if (!ViewData.ModelState.IsValid)
+    {
+        <div class="alert alert-danger" role="alert">
+            <strong>Error:</strong> There was a problem with your profile save.
+            <ul>
+                @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
                 {
-                    <div>No external logins configured</div>
+                    <li>@error.ErrorMessage</li>
                 }
-                else if (Model.ExternalLogins != null)
-                {
-                    <form method="post" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
-                        <div>
-                            @foreach (var provider in Model.ExternalLogins)
-                            {
-                                <button type="submit" class="btn btn-secondary mx-1"
-                                        name="provider" value="@provider.Name"
-                                        title="Log in using your @provider.DisplayName account">
-                                    <i class="bi bi-google"></i>
-                                </button>
-                                <a asp-controller="Account" asp-action="Login" class="btn btn-secondary mx-1">Login</a>
-                            }
-                        </div>
-                    </form>
-                }
-            }
-            
+            </ul>
+        </div>
+    }
+
+
+    <div class="container text-center w-100">
+        <div class="row">
+            <h6 class="h6 mb-3 fw-normal text-center col-md-auto"> Don't have an account? </h6>
+            <a asp-controller="Account" asp-action="Login" class="h6  text-secondary col-md-auto " type="submit">Login</a>
         </div>
     </div>
+    <div class="h7 text-center mb-4 mt-4 "> OR </div>
+</form>
+<div class="mt-3 text-center">
+    @{
+        if (Model.ExternalLogins?.Count == 0)
+        {
+            <div>No external logins configured</div>
+        }
+        else if (Model.ExternalLogins != null)
+        {
+            <form method="post" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
+                <div>
+                    @foreach (var provider in Model.ExternalLogins)
+                    {
+                        <button type="submit" class="btn btn-light border border-light w-100 m-auto text-dark mx-1 text-center"
+                                name="provider" value="@provider.Name"
+                                title="Log in using your @provider.DisplayName account">
+                            <i class="bi bi-google"></i>
+                            Continue with Google
+                        </button>
+                
+                    }
+                </div>
+            </form>
+        }
+    }
+            
 </div>
+
 
 @section Scripts {
     @{
