--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -125,7 +125,7 @@
         }
     </div>
 
-    <div class="col-md-3">
+    <div class="col-md-3 border-end">
         <h4 id="needReviewCountHeader">Need Review (@needReviewCount)</h4>
         <div id="needReviewColumn" class="task-column">
             @foreach (var task in Model.Task.Where(t => t.Status == "Need Review"))
