--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,9 +63,9 @@
                                     </a>
                                 </li>
                             }
-                            <li>
-                                <a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded" data-bs-toggle="modal" data-bs-target="#notificationModal" id="notificationLink">Notification</a>
-                            </li>
+                        <li>
+                            @await Component.InvokeAsync("Notification", userId)
+                        </li>
                             <li>
                                 <form id="logoutForm" asp-area="" asp-controller="Account" asp-action="Logout" method="post" class="form-inline">
                                     <a href="javascript:void(0);" id="logoutLink" class="nav-link text-dark">
