--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
 
 <body>
     <div class="d-flex  ">
-        <div class="border-end border-light  " >
+        <div class="border-end border-light  ">
             <!-- Sidebar content here -->
             <div class=" pt-3 align-items-center mb-3 border-bottom">
                 <a href="/" class="text-center  link-body-emphasis text-decoration-none ">
@@ -42,43 +42,43 @@ workspace</pre>
             <div class="align-items-center ">
                 <div class=" align-items-center border-bottom">
                     <div class=" justify-content-between mb-3">
-                        <button class="h4 btn btn-toggle d-inline-flex align-items-center  collapsed" data-bs-toggle="collapse" data-bs-target="#projects-collapse" aria-expanded="false">
+                        <button class="h4 btn btn-toggle d-inline-flex align-items-center  collapsed"
+                                data-bs-toggle="collapse" data-bs-target="#projects-collapse" aria-expanded="false">
                             Projects
                         </button>
-                        <a class=" ms-3 border border-2 border-primary-subtle rounded-pill fs-6"   asp-area="" asp-controller="Projects" asp-action="Add"><i class="bi bi-plus "></i>  </a>
+                        <a class=" ms-3 border border-2 border-primary-subtle rounded-pill fs-6" asp-area=""
+                           asp-controller="Projects" asp-action="Add"><i class="bi bi-plus "></i> </a>
                     </div>
                     <div class="collapse  " id="projects-collapse">
                         @await Component.InvokeAsync("Projects")
                     </div>
                 </div>
                 <div class="align-items-center mt-3  ">
-                    <button class="h4 btn btn-toggle d-inline-flex align-items-center  collapsed" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="true">
+                    <button class="h4 btn btn-toggle d-inline-flex align-items-center  collapsed"
+                            data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="true">
                         Account
                     </button>
                     <div class="collapse show" id="account-collapse">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                             <li>
-                                <a asp-controller="Account" asp-action="Profile" class="link-body-emphasis d-inline-flex text-decoration-none text-black rounded">Profile</a>
+                                <a asp-controller="Account" asp-action="Profile"
+                                   class="link-body-emphasis d-inline-flex text-decoration-none text-black rounded">Profile</a>
                             </li>
                             @if (User.IsInRole("admin"))
                             {
                                 <li>
-                                    <a asp-controller="Admin" asp-action="ManageUsers" class="link-body-emphasis d-inline-flex text-decoration-none text-black rounded">
+                                    <a asp-controller="Admin" asp-action="ManageUsers"
+                                       class="link-body-emphasis d-inline-flex text-decoration-none text-black rounded">
                                         Manage Users
                                     </a>
                                 </li>
                             }
-<<<<<<< HEAD
-                        <li>
-                            @await Component.InvokeAsync("Notification", userId)
-                        </li>
-=======
                             <li>
-                                <a href="#" class="link-body-emphasis d-inline-flex text-decoration-none text-black rounded" data-bs-toggle="modal" data-bs-target="#notificationModal" id="notificationLink" >Notification</a>
+                                @await Component.InvokeAsync("Notification", userId)
                             </li>
->>>>>>> 251bdcb2f116599e529c5798bdbb4bfbba23e11e
                             <li>
-                                <form id="logoutForm" asp-area="" asp-controller="Account" asp-action="Logout" method="post" class="form-inline">
+                                <form id="logoutForm" asp-area="" asp-controller="Account" asp-action="Logout"
+                                      method="post" class="form-inline">
                                     <a href="javascript:void(0);" id="logoutLink" class="nav-link text-black">
                                         Sign out
                                     </a>
@@ -101,7 +101,8 @@ workspace</pre>
     </div>
 
     <!-- Notification Modal -->
-    <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="notificationModalLabel" aria-hidden="true">
+    <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="notificationModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
