--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,46 +15,38 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
-    <style>
-        .task-card {
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            margin-bottom: 15px;
-            padding: 20px;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="d-flex  ">
-        <div class="border-end border-light  ">
+    <div class="d-flex">
+        <div class="border-end border-light">
             <!-- Sidebar content here -->
-            <div class=" pt-3 align-items-center mb-3 border-bottom">
-                <a href="/" class="text-center  link-body-emphasis text-decoration-none ">
-                    <span class="fs-5  ms-3 mb-3 fw-semibold ">TMSystem</span>
+            <div class="pt-3 align-items-center mb-3 border-bottom">
+                <a href="/" class="text-center link-body-emphasis text-decoration-none">
+                    <span class="fs-5 ms-3 mb-3 fw-semibold">TMSystem</span>
                 </a>
-                <div class="row m-3 ">
-                    <i class="bi bi-person-vcard col-md-auto "></i>
-                    <pre class="col-md-auto ">@User.Identity.Name
+                <div class="row m-3">
+                    <i class="bi bi-person-vcard col-md-auto"></i>
+                    <pre class="col-md-auto">@User.Identity.Name
 workspace</pre>
                 </div>
             </div>
-            <div class="align-items-center ">
-                <div class=" align-items-center border-bottom">
-                    <div class=" justify-content-between mb-3">
-                        <button class="h4 btn btn-toggle d-inline-flex align-items-center  collapsed"
+            <div class="align-items-center">
+                <div class="align-items-center border-bottom">
+                    <div class="justify-content-between mb-3">
+                        <button class="h4 btn btn-toggle d-inline-flex align-items-center collapsed"
                                 data-bs-toggle="collapse" data-bs-target="#projects-collapse" aria-expanded="false">
                             Projects
                         </button>
-                        <a class=" ms-3 border border-2 border-primary-subtle rounded-pill fs-6" asp-area=""
-                           asp-controller="Projects" asp-action="Add"><i class="bi bi-plus "></i> </a>
+                        <a class="ms-3 border border-2 border-primary-subtle rounded-pill fs-6" asp-area=""
+                           asp-controller="Projects" asp-action="Add"><i class="bi bi-plus"></i></a>
                     </div>
-                    <div class="collapse  " id="projects-collapse">
+                    <div class="collapse" id="projects-collapse">
                         @await Component.InvokeAsync("Projects")
                     </div>
                 </div>
-                <div class="align-items-center mt-3  ">
-                    <button class="h4 btn btn-toggle d-inline-flex align-items-center  collapsed"
+                <div class="align-items-center mt-3">
+                    <button class="h4 btn btn-toggle d-inline-flex align-items-center collapsed"
                             data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="true">
                         Account
                     </button>
@@ -74,7 +66,14 @@ workspace</pre>
                                 </li>
                             }
                             <li>
-                                @await Component.InvokeAsync("Notification", userId)
+                                <a href="#" class="link-body-emphasis d-inline-flex text-decoration-none text-black rounded position-relative"
+                                   data-bs-toggle="modal" data-bs-target="#notificationModal"
+                                   id="notificationLink">
+                                    Notification
+                                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id="unreadCountBadge" style="display: none;">
+                                        <span class="visually-hidden">unread messages</span>
+                                    </span>
+                                </a>
                             </li>
                             <li>
                                 <form id="logoutForm" asp-area="" asp-controller="Account" asp-action="Logout"
@@ -129,7 +128,6 @@ workspace</pre>
         var userId = '@userId';
     </script>
     <script src="~/js/notifications.js" asp-append-version="true"></script>
-
     <script src="~/js/sortable-tasks-new.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
