--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -44,11 +44,10 @@
 
     <div class="container text-center w-100">
         <div class="row">
-            <h6 class="h6 mb-3 fw-normal text-center col-md-auto"> Don't have an account? </h6>
-            <a asp-controller="Account" asp-action="Login" class="h6  text-secondary col-md-auto " type="submit">Login</a>
+            <h6 class="h6 mb-3 fw-normal text-center"> Already have an account? <a asp-controller="Account" asp-action="Login" class="h6 text-secondary">Login</a></h6>
         </div>
     </div>
-    <div class="h7 text-center mb-4 mt-4 "> OR </div>
+    <div class="h7 text-center mb-2 mt-2 "> OR </div>
 </form>
 <div class="mt-3 text-center">
     @{
