--- a/Views/Projects/Add.cshtml
+++ b/Views/Projects/Add.cshtml
@@ -9,7 +9,7 @@
 
 <form asp-action="Add" method="post">
 
-    <input type="hidden" asp-for="UserId" value="@userId" />
+    <input type="hidden" asp-for="User_id" value="@userId" />
 
     <div class="mt-3">
         <label class="form-label">Name</label>
