--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -45,7 +45,9 @@
             </ul>
         </div>
     }
-
+    <div>
+        <a asp-controller="Account" asp-action="ForgotPassword">Forgot Password?</a>
+    </div>
     <div class="mt-3 text-center">
         @{
             if (Model.ExternalLogins?.Count == 0)
