--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,11 @@
 workspace</pre>
                 </div>
             </div>
+            @*<div class="align-items-center mb-3">
+                <form class="m-3" method="get" action="/Search">
+                    <input class="form-control" placeholder="Type to search..." name="query">
+                </form>
+            </div>*@
             <div class="align-items-center">
                 <div class="align-items-center border-bottom">
                     <div class="justify-content-between mb-3">
@@ -123,6 +128,7 @@ workspace</pre>
             </div>
         </div>
     </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/5.0.11/signalr.min.js"></script>
     <script src="~/js/signalR.js" asp-append-version="true"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
