--- a/Views/Account/ForgotPassword.cshtml
+++ b/Views/Account/ForgotPassword.cshtml
@@ -1,20 +1,48 @@
 ﻿@model TaskManagementSystem.ViewModels.ForgotPasswordViewModel
+
 @{
     ViewData["Title"] = "ForgotPassword";
+    Layout = "~/Views/Shared/_AuthLayout.cshtml";
 }
 
-<h2>Forgot Password</h2>
-<hr />
-<div class="row">
-    <div class="col-md-12">
-        <form method="post" asp-action="ForgotPassword" asp-controller="Account">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+<div class="row justify-content-center">
+    <h1 class="h3 mb-3 fw-normal text-center">Reset your password</h1>
+    <p class="text-center">Enter your email address and we will send you instructions to reset your password.</p>
+    <form method="post" asp-action="ForgotPassword" asp-controller="Account">
+        <div class="form-floating mb-3">
+            <input asp-for="Email" type="text" class="form-control" id="floatingInput"
+                   placeholder="Email">
+            <label asp-for="Email" for="floatingInput">Email</label>
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+
+        <button class="btn btn-primary btn-lg bg-success mb-3 w-100 py-2" type="submit">Continue</button>
+
+        <div class="container text-center w-100">
+            <div class="row">
+                <a asp-controller="Account" asp-action="Login" class="h6 mb-3 fw-normal text-decoration-none text-center text-secondary">Back to login page</a>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
+        </div>
+
+    </form>
+
+    @if (!ViewData.ModelState.IsValid)
+    {
+        <div class="alert alert-danger" role="alert">
+            <strong>Error:</strong> There was a problem with your profile save.
+            <ul>
+                @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+                {
+                    <li>@error.ErrorMessage</li>
+                }
+            </ul>
+        </div>
+    }
+
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
