--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -44,7 +44,7 @@
 
     <div class="container text-center w-100">
         <div class="row">
-            <h6 class="h6 mb-3 fw-normal text-center"> Already have an account? <a asp-controller="Account" asp-action="Login" class="h6 text-secondary">Login</a></h6>
+            <h6 class="h6 mb-3 fw-normal text-center"> Already have an account? <a asp-controller="Account" asp-action="Login" class="h6 text-secondary text-decoration-none">Login</a></h6>
         </div>
     </div>
     <div class="h7 text-center mb-2 mt-2 "> OR </div>
