--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -11,32 +11,65 @@
     var doneCount = Model.Task.Count(t => t.Status == "Done");
 }
 
+<script>
+    var projectId = '@Model.Project_id';
+</script>
+
 <p>Created by <span>@ViewBag.CreatedByUsername</span> on <span>@Model.CreateAt.ToString("dd MMMM yyyy")</span></p>
 
 <div style="position: relative; margin-bottom: 20px;">
     @if (User.IsInRole("admin") || User.IsInRole("manager"))
     {
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateProjectModal"
-            style="position: absolute; top: 0; right: 120px;">
+                style="position: absolute; top: 0; right: 120px;">
             <i class="bi bi-pencil-square"></i>
         </button>
 
         <button class="btn btn-danger delete-project-button" style="position: absolute; top: 0; right: 60px;"
-            data-project-id="@Model.Project_id">
+                data-project-id="@Model.Project_id">
             <i class="bi bi-trash"></i>
         </button>
     }
     <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#viewMembersModal"
-        style="position: absolute; top: 0; right: 0;">
+            style="position: absolute; top: 0; right: 0;">
         <i class="bi bi-people"></i>
     </button>
 </div>
+
 
 <h2>@Model.Name</h2>
 
 <p>@Model.Description</p>
 
 <p>Updated lastest on <span>@Model.UpdateAt.ToString("dd MMMM yyyy")</span></p>
+
+<div class="advanced-search-container mb-4">
+    <div class="row">
+        <div class="col-md-3">
+            <input type="text" id="taskTitleSearchInput" class="form-control" placeholder="Search by title...">
+        </div>
+        <div class="col-md-3">
+            <select id="taskStatusSearchInput" class="form-control">
+                <option value="">All statuses</option>
+                <option value="To Do">To Do</option>
+                <option value="In Progress">In Progress</option>
+                <option value="Need Review">Need Review</option>
+                <option value="Done">Done</option>
+            </select>
+        </div>
+        <div class="col-md-3">
+            <select id="taskAssigneeSearchInput" class="form-control">
+                <option value="">All assignees</option>
+                <!-- Options will be loaded dynamically -->
+            </select>
+        </div>
+        <div class="col-md-3">
+            <input type="date" id="taskDueDateSearchInput" class="form-control">
+        </div>
+    </div>
+    <button id="searchButton" class="btn btn-primary mt-3">Search</button>
+</div>
+<div id="advancedSearchResults"></div>
 
 <h3>Tasks</h3>
 <div class="row">
@@ -59,14 +92,14 @@
                     <div class="mt-3">
 
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#detailtaskmodal" onclick="openTaskModal(@task.Task_id)">
+                                data-bs-target="#detailtaskmodal" onclick="openTaskModal(@task.Task_id)">
                             Detail Task
                         </button>
 
                         @if (User.IsInRole("admin") || User.IsInRole("manager"))
                         {
                             <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#taskModal"
-                                data-task-id="@task.Task_id" data-status="@task.Status">Edit</a>
+                               data-task-id="@task.Task_id" data-status="@task.Status">Edit</a>
                             <button class="btn btn-danger delete-task-button" data-task-id="@task.Task_id">Delete</button>
                         }
                     </div>
@@ -77,7 +110,7 @@
         {
             <div class="row mx-2">
                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#taskModal"
-                    data-status="To Do">
+                        data-status="To Do">
                     Add Task
                 </button>
             </div>
@@ -102,14 +135,14 @@
                     </p>
                     <div class="mt-3">
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#detailtaskmodal" onclick="openTaskModal(@task.Task_id)">
+                                data-bs-target="#detailtaskmodal" onclick="openTaskModal(@task.Task_id)">
                             Detail Task
                         </button>
 
                         @if (User.IsInRole("admin") || User.IsInRole("manager"))
                         {
                             <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#taskModal"
-                                data-task-id="@task.Task_id" data-status="@task.Status">Edit</a>
+                               data-task-id="@task.Task_id" data-status="@task.Status">Edit</a>
                             <button class="btn btn-danger delete-task-button" data-task-id="@task.Task_id">Delete</button>
                         }
                     </div>
@@ -120,7 +153,7 @@
         {
             <div class="row mx-2">
                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#taskModal"
-                    data-status="In Progress">
+                        data-status="In Progress">
                     Add Task
                 </button>
             </div>
@@ -146,14 +179,14 @@
                     <div class="mt-3">
 
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#detailtaskmodal" onclick="openTaskModal(@task.Task_id)">
+                                data-bs-target="#detailtaskmodal" onclick="openTaskModal(@task.Task_id)">
                             Detail Task
                         </button>
 
                         @if (User.IsInRole("admin") || User.IsInRole("manager"))
                         {
                             <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#taskModal"
-                                data-task-id="@task.Task_id" data-status="@task.Status">Edit</a>
+                               data-task-id="@task.Task_id" data-status="@task.Status">Edit</a>
                             <button class="btn btn-danger delete-task-button" data-task-id="@task.Task_id">Delete</button>
                         }
                     </div>
@@ -164,7 +197,7 @@
         {
             <div class="row mx-2">
                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#taskModal"
-                    data-status="Need Review">
+                        data-status="Need Review">
                     Add Task
                 </button>
             </div>
@@ -190,14 +223,14 @@
                     <div class="mt-3">
 
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#detailtaskmodal" onclick="openTaskModal(@task.Task_id)">
+                                data-bs-target="#detailtaskmodal" onclick="openTaskModal(@task.Task_id)">
                             Detail Task
                         </button>
 
                         @if (User.IsInRole("admin") || User.IsInRole("manager"))
                         {
                             <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#taskModal"
-                                data-task-id="@task.Task_id" data-status="@task.Status">Edit</a>
+                               data-task-id="@task.Task_id" data-status="@task.Status">Edit</a>
                             <button class="btn btn-danger delete-task-button" data-task-id="@task.Task_id">Delete</button>
                         }
                     </div>
@@ -208,7 +241,7 @@
         {
             <div class="row mx-2">
                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#taskModal"
-                    data-status="Done">
+                        data-status="Done">
                     Add Task
                 </button>
             </div>
@@ -247,7 +280,7 @@
 
 <!-- Update Project Modal -->
 <div class="modal fade" id="updateProjectModal" tabindex="-1" aria-labelledby="updateProjectModalLabel"
-    aria-hidden="true">
+     aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -339,7 +372,7 @@
 
 <!-- Add User to Project Modal -->
 <div class="modal fade" id="addUserToProjectModal" tabindex="-1" aria-labelledby="addUserToProjectModalLabel"
-    aria-hidden="true">
+     aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -398,7 +431,7 @@
 
 <!-- Confirmation delete task modal -->
 <div class="modal fade" id="confirmDeleteTaskModal" tabindex="-1" aria-labelledby="confirmationModalLabel"
-    aria-hidden="true">
+     aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -418,7 +451,7 @@
 
 <!-- Confirmation delete project modal -->
 <div class="modal fade" id="confirmDeleteProjectModal" tabindex="-1" aria-labelledby="confirmationModalLabel"
-    aria-hidden="true">
+     aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -438,6 +471,7 @@
 
 @section Scripts {
     <script src="~/js/sortable-tasks.js"></script>
+    <script src="~/js/search-tasks.js"></script>
     <script src="~/js/task-add-edit-modal.js"></script>
     <script src="~/js/delete-task.js"></script>
     <script src="~/js/delete-project.js"></script>
