--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -47,28 +47,21 @@
         </div>
     }
     <div class="mt-3 text-center">
-        @{
-            if (Model.ExternalLogins?.Count == 0)
-            {
-                <div>No external logins configured</div>
-            }
-            else
-            {
-                <form method="post" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
-                    <div>
-                        @foreach (var provider in Model.ExternalLogins)
-                        {
-                            <button class="btn btn-light border border-light w-100 m-auto text-dark mx-1 text-center" type="submit" name="provider" value="@provider.Name"
-                                    title="Log in using your @provider.DisplayName account">
+        @if (Model.ExternalLogins?.Count > 0)
+        {
+            <form method="post" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
+                <div>
+                    @foreach (var provider in Model.ExternalLogins)
+                    {
+                        <button class="btn btn-light border border-light w-100 m-auto text-dark mx-1 text-center" type="submit" name="provider" value="@provider.Name"
+                                title="Log in using your @provider.DisplayName account">
 
-                                <i class="bi bi-google"></i>
-                                Continue with Google
-                            </button>
-
-                        }
-                    </div>
-                </form>
-            }
+                            <i class="bi bi-google"></i>
+                            Continue with Google
+                        </button>
+                    }
+                </div>
+            </form>
         }
     </div>
   
