--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TaskManagementSystem.ViewModels.ProfileViewModel
 @using TaskManagementSystem.Areas.Identity.Data
-@using TaskManagementSystem.Proxies
+@using TaskManagementSystem.Services.Proxies
 @inject UserManagementProxy _realService
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<ApplicationUser> _userManager
